# cookiecutter-click-pip

./: README.md  cookiecutter.json  pyproject.toml
hooks/: post_gen_project.sh
{{cookiecutter.project_name}}/: .travis.yml  CHANGELOG.rst  CONTRIBUTING.rst  README.rst  pyproject.toml  setup.cfg  setup.py
{{cookiecutter.project_name}}/docs/: requirements.txt
{{cookiecutter.project_name}}/docs/source/: cli.rst  conf.py  index.rst  modules.rst  submodules.rst
{{cookiecutter.project_name}}/src/ToDonePy/: __init__.py
{{cookiecutter.project_name}}/src/command_line/: __init__.py
{{cookiecutter.project_name}}/src/{{cookiecutter.project_name}}/: __init__.py
{{cookiecutter.project_name}}/tests/: __init__.py
