[tool.poetry]
name = "cookiecutter-click-pip"
version = "1.0.0"
description = "A (hopefully) not too opinionated template for developing Click apps"
authors = ["rbpatt2019 <ryan.patterson.2015@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.5"
cookiecutter = "^1.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
