[tool.poetry]
name = "{{cookiecutter.project_name}}"
version = "0.1.0"
description = "{{cookiecutter.description}}"
authors = ["{{cookiecutter.user_name}} <{{cookiecutter.email}}>"]
license = "GPL-3.0+"
readme = "README.rst"
homepage = "https://pypi.org/project/{{cookiecutter.project_name}}/"
repository = "https://github.com/{{cookiecutter.user_name}}/{{cookiecutter.project_name}}"
documentation = "https://{{cookiecutter.project_name}}.readthedocs.io/en/latest/"
classifiers=[
        "Development Status :: 3 - Alpha",
        "Intended Audience :: Developers",
        "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
        "Natural Language :: English",
        "Operating System :: Unix",
        "Programming Language :: Python :: 3.6",
        "Programming Language :: Python :: 3.7",
]
packages = [
        { include = "command_line", from = "src" },
        { include = "{{cookiecutter.project_name}}", from = "src" },
]

[tool.poetry.dependencies]
python = ">=3.6, <3.8"
Click = "^7.0"

[tool.poetry.dev-dependencies]
black = {version = "^19.3b0", allows-prereleases = true}
codecov = "^2.0.15"
coverage = "^4.5.4"
isort = "^4.3.21"
mypy = "^0.740"
mypy-extensions = "^0.4.3"
pyflakes = "^2.1.1"
pytest = "^5.2.1"
pytest-cov = "^2.8.1"
pytest-instafail = "^0.4.1"
pytest-mypy = "^0.4.1"
pytest-runner = "^5.1"
Sphinx = "^2.1.2"
sphinx-click = "^2.3.0"
twine = "^2.0.0"
poetry-version = "^0.1.3"
sphinxcontrib-fulltoc = "^1.2"

[tool.poetry.scripts]
to = "command_line.example:hello"

[tool.isort]
multi_line_output = 3
include_trailing_comma = "True"
force_grid_wrap = 0
use_parentheses = "True"
line_length = 88

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
